summary: A NetApp oferece recursos novos e aprimorados em todas as versões dos serviços do Keystone STaaS. 
---
= Novidades do Keystone STaaS
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Saiba mais sobre os recursos e aprimoramentos mais recentes nos serviços Keystone STaaS.



== 13 de outubro de 2025

Novos aprimoramentos no painel do Keystone no NetApp Console:



=== Coluna de substituição de política de QoS na guia Ativos

A guia *Volumes em clusters* dentro da guia *Ativos* agora inclui uma coluna *Substituição de política de QoS* que indica se as regras de QoS são ignoradas para volumes de backup e espelho, exibindo *verdadeiro* (regras ignoradas), *falso* (regras aplicadas) ou *N/D* (para volumes espelho).


NOTE: Para assinaturas do Keystone v3, esta coluna exibe *N/A*, pois as políticas de QoS não são aplicáveis ​​na oferta v3.



=== Visibilidade de alertas aprimorada na página Visão geral

A página *Visão geral* agora inclui duas novas seções de alerta denominadas *Alertas não resolvidos por gravidade* e *Alertas Keystone não resolvidos mais antigos*. Para saber mais, consultelink:https://docs.netapp.com/us-en/keystone-staas/integrations/keystone-console.html["Painel Keystone no NetApp Console"] .



== 06 de outubro de 2025



=== BlueXP agora é NetApp Console

O NetApp Console, criado com base na base aprimorada e reestruturada do BlueXP , fornece gerenciamento centralizado do armazenamento NetApp e do NetApp Data Services em ambientes locais e na nuvem em nível empresarial, fornecendo insights em tempo real, fluxos de trabalho mais rápidos e administração simplificada, de forma altamente segura e compatível.

Para obter detalhes sobre o que mudou, consulte olink:https://docs.netapp.com/us-en/bluexp-relnotes/index.html["Notas de versão do NetApp Console"^] .



== 22 de setembro de 2025



=== Adição de monitoramento de alertas
